@@ -1,0 +1,19 @@
+//---------------------------------------------------------------------------------------
+//  $Id$
+//  Copyright (c) 2009 by Mulle Kybernetik. See License file for details.
+//---------------------------------------------------------------------------------------
+
+#import "NSMethodSignature+OCMAdditions.h"
+
+
+@implementation NSMethodSignature(OCMAdditions)
+
+- (const char *)methodReturnTypeWithoutQualifiers
+{
+	const char *returnType = [self methodReturnType];
+	while(strchr("rnNoORV", returnType[0]) != NULL)
+		returnType += 1;
+	return returnType;
+}
+
+@end
