@@ -69,8 +69,10 @@
 
 - (id)init
 {
+	// no [super init], we're inheriting from NSProxy
+	expectationOrderMatters = NO;
 	recorders = [[NSMutableArray alloc] init];
-	expectations = [[NSMutableSet alloc] init];
+	expectations = [[NSMutableArray alloc] init];
 	exceptions = [[NSMutableArray alloc] init];
 	return self;
 }
@@ -88,6 +90,11 @@
 	return @"OCMockObject";
 }
 
+
+- (void)setExpectationOrderMatters:(BOOL)flag
+{
+    expectationOrderMatters = flag;
+}
 
 
 #pragma mark  Public API
@@ -113,7 +120,7 @@
 	if([expectations count] == 1)
 	{
 		[NSException raise:NSInternalInconsistencyException format:@"%@: expected method was not invoked: %@", 
-			[self description], [[expectations anyObject] description]];
+			[self description], [[expectations objectAtIndex:0] description]];
 	}
 	if([expectations count] > 0)
 	{
@@ -153,6 +160,12 @@
 	
 	if([expectations containsObject:recorder])
 	{
+		if(expectationOrderMatters && ([expectations objectAtIndex:0] != recorder))
+		{
+			[NSException raise:NSInternalInconsistencyException	format:@"%@: unexpected method invoked: %@\n\texpected:\t%@",  
+			 [self description], [recorder description], [[expectations objectAtIndex:0] description]];
+			
+		}
 		[expectations removeObject:recorder];
 		[recorders removeObjectAtIndex:i];
 	}
